Changing <style> element's media attribute should reflect is CSS.

When changing media attribute from "none" to "all", CSSStyleSheet is not created
earlier. By calling StyleElement::ChildrenChanged, it make sure new CSSStyleSheet
will be created.

Bug: 756804
Change-Id: I8c38f2daf6d70b749a0f8de394d646f755695d02