third_party/WebKit/Source/core/dom/StyleElement.cpp
@@ -152,19 +152,15 @@ StyleElement::ProcessingResult StyleElement::CreateSheet(Element& element,
   if (IsCSS(element, type) && passes_content_security_policy_checks) {
     RefPtr<MediaQuerySet> media_queries = MediaQuerySet::Create(media());
 
-    MediaQueryEvaluator screen_eval("screen");
-    MediaQueryEvaluator print_eval("print");
-    if (screen_eval.Eval(*media_queries) || print_eval.Eval(*media_queries)) {
-      loading_ = true;
-      TextPosition start_position =
-          start_position_ == TextPosition::BelowRangePosition()
-              ? TextPosition::MinimumPosition()
-              : start_position_;
-      new_sheet = document.GetStyleEngine().CreateSheet(
-          element, text, start_position, style_engine_context_);
-      new_sheet->SetMediaQueries(media_queries);
-      loading_ = false;
-    }
+    loading_ = true;
+    TextPosition start_position =
+        start_position_ == TextPosition::BelowRangePosition()
+            ? TextPosition::MinimumPosition()
+            : start_position_;
+    new_sheet = document.GetStyleEngine().CreateSheet(
+        element, text, start_position, style_engine_context_);
+    new_sheet->SetMediaQueries(media_queries);
+    loading_ = false;
   }
 
   if (sheet_)
